# intent-gateway

./: .gitignore  Cargo.toml  README.md  run_benchmarks.py
.github/workflows/: ci.yml
crates/co-core/: Cargo.toml
crates/co-core/src/: allocator.rs  embedding.rs  fault_inject.rs  lib.rs  pipeline.rs  ring_buffer.rs  statistics.rs  transcoder.rs
crates/co-fusion/: Cargo.toml
crates/co-fusion/src/: lib.rs
crates/co-grpc/: Cargo.toml  build.rs
crates/co-grpc/src/: lib.rs
crates/co-inference/: Cargo.toml
crates/co-inference/src/: lib.rs
crates/co-ingest/: Cargo.toml
crates/co-ingest/src/: lib.rs
crates/co-replay/: Cargo.toml
crates/co-replay/src/: lib.rs
proto/: co.proto
python/: convert_dataset.py  convert_openneuro.py  export_onnx.py  generate_synthetic_corec.py  grpc_client.py  requirements.txt  validate_onnx.py
rust/: Cargo.toml
rust/artifacts/allocations/: README.md
rust/artifacts/benchmarks/: README.md
rust/artifacts/embeddings/: README.md
rust/artifacts/flamegraphs/: README.md
rust/artifacts/fuzz/: README.md
rust/artifacts/histograms/: README.md
rust/artifacts/perf/: README.md
rust/artifacts/stress/: README.md
rust/crates/allocator/: Cargo.toml
rust/crates/allocator/src/: lib.rs
rust/crates/allocator/tests/: integration.rs
rust/crates/embedding/: Cargo.toml
rust/crates/embedding/src/: lib.rs
rust/crates/fault-inject/: Cargo.toml
rust/crates/fault-inject/src/: lib.rs
rust/crates/pipeline/: Cargo.toml
rust/crates/pipeline/src/: lib.rs  main.rs
rust/crates/ring-buffer/: Cargo.toml
rust/crates/ring-buffer/benches/: throughput.rs
rust/crates/ring-buffer/src/: buffer.rs  lib.rs
rust/crates/ring-buffer/tests/: zero_alloc.rs
rust/crates/statistics/: Cargo.toml
rust/crates/statistics/benches/: stats.rs
rust/crates/statistics/src/: lib.rs
rust/crates/transcoder/: Cargo.toml
rust/crates/transcoder/benches/: decode.rs
rust/crates/transcoder/fuzz/: Cargo.toml
rust/crates/transcoder/fuzz/fuzz_targets/: decode.rs
rust/crates/transcoder/src/: lib.rs
rust/docs/: real-time-analysis.md
